src/_scss/pages/dashboard/graph/_warningsInfoGraph.scss
.warnings-info {
    @import './axis';

    .results-table-error {
        * {
            color: $color-gray !important;
        }
        margin-top: rem(179);
        margin-bottom: rem(179);
    }

    .results-table-no-results{
        margin-top: rem(175);
        margin-bottom: rem(175);
    }

    .results-table-loading{
        margin-top: rem(235);
        margin-bottom: rem(235);
    }
}

